# zetscript

./: .cproject  .gitignore  .project  .swp  BuiltinType.h  ByteCode.cpp  ByteCode.h  CASTNode.cpp  CASTNode.cpp.old  CASTNode.h  CASTNode.h.old  CBaseClassFunctionData.cpp  CBaseClassFunctionData.h  CByteCode.cpp  CByteCode.h  CCommonClassFunctionBase.cpp  CCommonClassFunctionBase.h  CCommonClassFunctionData.cpp  CCommonClassFunctionData.h  CCompiler.cpp  CCompiler.h  CCompiler.h.old  CEval.cpp  CEval.h  CFunctionMemberPointer.h  CFunctorScriptVariable.cpp  CHANGELOG.md  CMakeLists.txt  CMemberFunctionPointer.h  CNativeFunction.cpp  CNativeFunction.h  CNativeFunctionFactory.cpp  CNativeFunctionFactory.h  COPYRIGHT  CScope.cpp  CScope.h  CScopeFactory.cpp  CScopeFactory.h  CScriptClass.cpp  CScriptClass.h  (+104 more)
src/: .cproject  .gitignore  .project  BuiltinType.h  ByteCode.cpp  ByteCode.h  ByteCodeHelper.cpp  CMakeLists.txt  CZetScript.cpp  CZetScript.h  Config.h.in  HISTORY  Instruction.cpp  Instruction.h  Metamethod.cpp  Metamethod.h  MetamethodId.h  ScriptEngine.cpp  ScriptEngine.h  ScriptEngine.tcc  StackElement.cpp  StackElement.h  StackElement.tcc  StackElementMemberProperty.h  State.h  Symbol.cpp  Symbol.h  Type.h  cmake_build  common.h  config.h.in  historic.txt  include_all.cpp  main.cpp  main_util.cpp  programming_standards.txt  rebuild_project  stk_utils.cpp  stk_utils.h  stk_utils.tcc  (+6 more)
src/base/: @base.cpp  @base.h  Boolean.cpp  Boolean.h  Buffer.cpp  Buffer.h  Character.cpp  Character.h  Common.h  Config.h  Console.cpp  Console.h  DateTime.cpp  DateTime.h  Directory.cpp  Directory.h  Exception.cpp  Exception.h  File.cpp  File.h  Float.cpp  Float.h  Integer.cpp  Integer.h  List.h  List.tcc  Log.cpp  Log.h  MapInt.cpp  MapInt.h  MapIntIterator.cpp  MapIntIterator.h  MapString.cpp  MapString.h  MapStringIterator.cpp  MapStringIterator.h  Memory.cpp  Memory.h  Path.cpp  Path.h  (+12 more)
src/byte_code/: ByteCode.cpp  ByteCode.h  MetamethodByteCode.cpp  MetamethodByteCode.h  zs_byte_code.cpp  zs_byte_code.h
src/compiler/: compiler.cpp  compiler.h  compiler_data.cpp  compiler_expression.cpp  compiler_expression_byte_code.cpp  compiler_expression_optimize.cpp  compiler_expression_token_symbol.cpp  compiler_keyword.cpp  compiler_keyword.h  compiler_keyword_class.cpp  compiler_keyword_conditional.cpp  compiler_keyword_function.cpp  compiler_keyword_loop.cpp  compiler_keyword_var.cpp  compiler_object.cpp  compiler_operator.cpp  compiler_operator.h  compiler_symbol.cpp
src/core/: @core.cpp  @core.h  ByteCode.h  ByteCodeHelper.h  CASTNode.cpp  CASTNode.h  CCompiler.cpp  CCompiler.h  CContext.cpp  CContext.h  CFunction_C_TypeFactory.cpp  CFunction_C_TypeFactory.h  CNativeFunction.cpp  CScope.cpp  CScope.h  CScriptClass.cpp  CScriptClass.h  CScriptClassFactory.cpp  CScriptClassFactory.h  CScriptFunction.cpp  CScriptFunction.h.old  CScriptFunctionObject.cpp  CScriptFunctionObject.h  CSharedPointerManagement.cpp  CSharedPointerManager.cpp  CSharedPointerManager.h  CState.cpp  CState.h  Common.h  Instruction.cpp  Instruction.h  MemberProperty.cpp  MemberProperty.h  Metamethod.h  MetamethodHelper.cpp  MetamethodHelper.h  MetamethodMembers.cpp  MetamethodMembers.h  RegisterFunctionHelper.h  ScriptDefinesStructs.h  (+10 more)
src/eval/: eval.cpp  eval.h  eval_data.cpp  eval_expression.cpp  eval_expression_byte_code.cpp  eval_expression_optimize.cpp  eval_expression_token_symbol.cpp  eval_keyword.cpp  eval_keyword.h  eval_keyword_class.cpp  eval_keyword_conditional.cpp  eval_keyword_function.cpp  eval_keyword_loop.cpp  eval_keyword_var.cpp  eval_keyword_var_function.cpp  eval_object.cpp  eval_operator.cpp  eval_operator.h  eval_symbol.cpp
src/factory/: CASTNodeFactory.h  CFactory.h  CFactoryContainer.cpp  CFactoryContainer.h  CFunction_C_TypeFactory.h  CScopeFactory.cpp  CScopeFactory.h  CScriptClassFactory.cpp  CScriptClassFactory.h  CScriptFunctionObjectFactory.cpp  zg_factory.cpp  zg_factory.h  zs_factory.h
src/function/: Function.h  FunctionFactory.cpp  FunctionFactory.h  FunctionParam.cpp  FunctionTraits.h
src/libzetscript/: .gitignore  CMakeLists.txt  CZetScript.cpp  CZetScript.h  historic.txt
src/module/: @module.cpp  @module.h  ArrayIteratorObjectModule.h  ArrayObjectModule.cpp  ConsoleModule.cpp  ConsoleModule.h  ConsoleModuleWrap.cpp  ConsoleModuleWrap.h  DateTimeModule.cpp  DateTimeModule.h  DictionaryIteratorObjectModule.cpp  DictionaryIteratorObjectModule.h  DictionaryObjectModule.cpp  DictionaryObjectModule.h  JsonDeserializeModule.cpp  JsonDeserializeModuleWrap.cpp  JsonModule.cpp  JsonModule.h  JsonModuleWrap.cpp  JsonModuleWrap.h  JsonSerializeModule.cpp  MathModule.cpp  MathModule.h  MathModuleWrap.cpp  MathModuleWrap.h  ModuleConsoleWrap.cpp  ModuleConsoleWrap.h  ModuleDateTimeWrap.cpp  ModuleJsonSerializeWrap.cpp  ModuleJsonWrap.cpp  ModuleMathWrap.cpp  ModuleMathWrap.h  StringIteratorObjectModule.h  StringObjectModule.cpp  SystemModule.cpp  SystemModule.h  SystemModuleWrap.cpp  SystemModuleWrap.h  TimeSpanModule.cpp  TimeSpanModule.h  (+2 more)
src/object/: ArrayIteratorObject.cpp  ArrayObject.h  CBoolean.cpp  CBoolean.h  CFunctor.cpp  CFunctor.h  CInteger.cpp  CInteger.h  CNumber.cpp  CNumber.h  CObject.cpp  CObject.h  CString.cpp  CString.h  CUndefined.cpp  CUndefined.h  CVariable.cpp  CVariable.h  CVector.cpp  CVector.h  CVoid.cpp  CVoid.h  ClassObject.cpp  ClassObject.h  ContainerSlot.cpp  DictionaryIteratorObject.cpp  DictionaryIteratorObject.h  DictionaryObject.cpp  DictionaryObject.h  DictionaryObject.tcc  MemberFunctionObject.cpp  MemberFunctionObject.h  Object.cpp  zg_object.cpp  zg_object.h
src/scope/: Scope.cpp  Scope.h  ScopeFactory.cpp  ScopeFactory.h  zs_scope.cpp  zs_scope.h
src/script/: CALE.cpp  CALE.h  CCompiler.cpp  CCompiler.h  CContext.cpp  CContext.h  CLocalScope.cpp  CLocalScope.h  CScope.cpp  CScope.h  CScriptClass.cpp  CScriptClass.h  CScriptClassFactory.cpp  CScriptClassFactory.h  CScriptFunction.cpp  CScriptFunction.h  CSharedPointerManagement.cpp  CSharedPointerManagement.h  CVirtualMachine.cpp  CVirtualMachine.h  ContainerSlotAssignment.cpp  MemberAttribute.cpp  (+93 more)
(+2221 files in other folders)
